# AgentLedger

./: .agentledger.toml  .gitignore  ALPHA.md  CHANGELOG.md  COMMERCIAL-LICENSE.md  COMMERCIAL.md  LICENSE  LICENSE.md  NOTICE.md  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
docs/: alpha-checklist.md  alpha-feedback-readiness.md  alpha-feedback-template.md  alpha-install-confidence.md  alpha-notes.md  alpha-tester-guide.md  alpha-troubleshooting.md  check-json-ci.md  commercial-mvp.md  demo.md  desktop-app.md  doctor-markdown-feedback.md  first-run.md  install.md  json-contracts.md  policy-presets.md  private-alpha-checklist.md  private-alpha-feedback-template.md  private-alpha-notes.md  private-alpha-tester-guide.md  public-alpha-recipes.md  public-alpha-trial.md  public-demo-script.md  receipt.md  release-checklist.md  release-process.md  support-packet-markdown-example.md  support-packet-markdown-qa.md
examples/: sanitized-first-run-output.md
scripts/: alpha.ps1  build-desktop.ps1  check_github_release.py  check_release_metadata.py  check_release_process.py  desktop_entry.py  ensure-git.ps1  finalize_release_notes.py  install-check.ps1  install-source-check.ps1  post_release_check.py  prepare_release.py  private-alpha.ps1  rehearse_release.py  release-check.ps1  release-dry-run.ps1  release_artifact_doctor.py  release_check_summary.py  release_command_index.py  release_evidence_packet.py  release_notes.py  release_readiness_report.py  release_rehearsal_receipt.py  smoke.ps1  smoke.sh  tokometer-summary.mjs  verify_release_rehearsal.py  write_desktop_icon.py  (+1 more)
(+54 files in other folders)
